<resources>
    <string name="app_name">TrassTarea</string>
    <string name="main_tv_slogan">Tus tareas, tu ritmo, tu éxito.</string>
    <string name="main_bt_empezar">Empezar</string>
    <string name="main_iv_descripcion">Imagen con el logotipo de la app</string>
    <string name="listado_tv_vacio">No hay tareas disponibles</string>
    <string name="listado_tv_no_prioritarias">No hay tareas prioritarias disponibles</string>
    <string name="elemento_tv_titulo">Título de la Tarea</string>
    <string name="elemento_tv_fecha">dd/mm/aaaa</string>
    <string name="elemento_tv_quedan">Quedan:</string>
    <string name="elemento_tv_ndias">00</string>
    <string name="elemento_tv_dias">días</string>
    <string name="item_acerca_de">Acerca de…</string>
    <string name="item_salir">Salir</string>
    <string name="item_crear_tarea">Crear Tarea</string>
    <string name="item_prioritarias">Prioritarias</string>
    <string name="item_descripcion">Descripción</string>
    <string name="item_editar">Editar</string>
    <string name="item_borrar">Borrar</string>
    <string name="tv_crear_tarea">Crear tarea</string>
    <string name="tv_editar_tarea">Editar tarea</string>
    <string name="tv_titulo">Título</string>
    <string name="et_titulo">Título de la tarea</string>
    <string name="tv_fecha_creacion">Fecha creación</string>
    <string name="tv_fecha_objetivo">Fecha objetivo</string>
    <string name="tv_progreso">Progreso</string>
    <string name="cb_prioritaria">Prioritaria</string>
    <string name="bt_siguiente">Siguiente</string>
    <string name="tv_descripcion">Detalle</string>
    <string name="bt_guardar">Guardar</string>
    <string name="bt_volver">Volver</string>
    <string name="hint_et_descripcion">Describe con detalle la tarea</string>
    <string name="msg_salida">Hasta pronto</string>
    <string name="tarea_add">Tarea añadida</string>
    <string name="et_fecha">dd/mm/aaaa</string>
    <string name="about_title">Acerca de…</string>
    <string name="about_msg">Julio Alberto Mayoral Villegas\n IES Trassierra\n\u00A9 2024</string>
    <string name="about_ok">Aceptar</string>
    <string name="dialog_confirmacion_titulo">Confirmar borrado</string>
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>
    <string name="dialog_msg">¿Confirmas que quieres borrar la tarea:</string>
    <string name="dialog_erased">Tarea borrada</string>
    <string name="dialog_not_found">Tarea no encontrada</string>
    <string name="dialog_description">Descripción</string>
    <string name="dialog_close">Cerrar</string>
    <string name="tarea_edit">Tarea editada</string>
    <string name="action_canceled">Acción cancelada</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="ad_campos_incompletos">Campos incompletos</string>
    <string name="ad_campos_contenido">Complete la información de título y fechas</string>
    <string name="bt_aceptar">Aceptar</string>
    <string name="ad_fechas">Fechas inconsistentes</string>
    <string name="ad_fechas_contenido">La fecha objetivo no puede ser anterior a la fecha de creación</string>

    <string name="item_preferences">Preferencias</string>
    <string name="preferences_titulo_visualizacion">Visualización</string>
    <string name="preferences_titulo_ordenacion">Ordenación</string>
    <string name="preferences_tamanyo_letra">Tamaño de letra</string>

    <string name="preferences_claro">Claro</string>
    <string name="preferences_oscuro">Oscuro</string>
    <string name="preferences_theme">Tema</string>
    <string name="media">Mediana</string>

    <string name="CriterioOrdenacion">Fecha de creación</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preferences_criterio">Criterio</string>

    <string name="preferences_ordenacion_asc">Ascendente</string>
    <string name="preferences_ordenacion_desc">Descendente</string>
    <string name="preferences_orden">Orden</string>

    <string name="preferences_almacenamiento">Almacenamiento</string>
    <string name="preferences_bbdd_externa">Base de datos externa</string>
    <string name="preferences_almacenamiento_tarjeta_sd">Almacenamiento en tarjeta SD</string>
    <string name="preferences_almacenamiento_limpieza">Limpieza de archivos</string>

    <string name="preferences_almacenamiento_bbdd">Base de datos</string>
    <string name="preferences_almacenamiento_bbdd_ext">Externa</string>
    <string name="preferences_almacenamiento_bbdd_int">Interna</string>

    <string name="preferences_nombre_bbdd">Nombre Base de Datos</string>
    <string name="preferences_puerto">Puerto</string>
    <string name="preferences_usuario">Usuario</string>
    <string name="preferences_password">Contraseña</string>

    <string name="preferences_restablecer">Restablecer</string>
    <string name="preferences_restablecer_configuracion">Restablecer configuración</string>
    <string name="estadisticas">Estadísticas</string>

    <string name="btn_documento">Documentos</string>
    <string name="btn_imagen">Imágenes</string>
    <string name="btn_audio">Audio</string>
    <string name="btn_video">Vídeo</string>

    <!-- Preference Titles -->
    <!-- Títulos de las Preferencias -->
    <string name="messages_header">Mensajes</string>
    <string name="sync_header">Sincronización</string>

    <!-- Preferencias de Mensajes -->
    <string name="signature_title">Tu firma</string>
    <string name="reply_title">Acción de respuesta predeterminada</string>

    <!-- Preferencias de Sincronización -->
    <string name="sync_title">Sincronizar correo periódicamente</string>
    <string name="attachment_title">Descargar adjuntos entrantes</string>
    <string name="attachment_summary_on">Descargar automáticamente adjuntos para correos entrantes</string>
    <string name="attachment_summary_off">Solo descargar adjuntos cuando se solicite manualmente</string>

</resources>