<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FragmentoDos">

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_descripcion"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bt_volver"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_et_descripcion"
            android:inputType="textMultiLine"
            android:lines="15" />
    </ScrollView>

    <Button
        android:id="@+id/bt_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:text="@string/bt_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_guardar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/bt_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_guardar"
        app:layout_constraintBottom_toBottomOf="@+id/bt_volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_volver"
        app:layout_constraintTop_toTopOf="@+id/bt_volver" />

    <Button
        android:id="@+id/bt_documentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/btn_documento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_imagen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_imagen"
        app:layout_constraintEnd_toStartOf="@+id/bt_audio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_documentos"
        app:layout_constraintTop_toTopOf="@+id/bt_documentos" />

    <Button
        android:id="@+id/bt_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_audio"
        app:layout_constraintEnd_toStartOf="@+id/bt_video"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_imagen"
        app:layout_constraintTop_toTopOf="@+id/bt_imagen" />

    <Button
        android:id="@+id/bt_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_audio"
        app:layout_constraintTop_toTopOf="@+id/bt_audio" />

</androidx.constraintlayout.widget.ConstraintLayout>